# VCF-GWAS

./: README.md  pyproject.toml
notebooks/: harm_vcf_gwas_breast_cancer.ipynb  harm_vcf_gwas_parkinson.ipynb  vcf_analysis.ipynb  vcf_gwas_table.ipynb
notebooks/backup/: vcf_gwas_table_parkinson_siblings.ipynb
