[project]
name = "VCF-GWAS"
version = "0.1.0"
description = "variant calling and genome wide association (GWAS)"
requires-python = ">=3.11,<3.12"
dependencies = [
    "pysam>=0.23.3",
    "pygwasvcf>=0.0.4",
    "ipykernel",
    "pandas",
    "python-dotenv",
    "pypdf",
    "scipy",
    "jupyterlab",
    "matplotlib>=3.10.8",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "umap-learn>=0.5.11",
    "plotly>=6.6.0",
    "setuptools>=82.0.1",
    "hdbscan>=0.8.42",
    "scikit-posthocs>=0.12.0",
    "pathlib>=1.0.1",
]

